0.5
  - Refactor password callback to avoid jumping on error
  - Fix a bug with reading the new openssh pem keys
  - Disconnect session immediately on startup/authentication errors
  - Raise a warning when the GC collects an ssh session which is still connected.
  - Rename ssh_info() to ssh_session_info()

0.4:
  - Fix for security problem with latest openssh-server
  - Windows/Mac: update libssh to 0.8.6
  - Use new 'askpass' package for password and passphrase prompts
  - Use new ssh_session_is_known_server() api on libssh 0.8 and up
  - Fix bug that would write key to known_hosts for each connection
  - Add support for parsing ipv6 ip-address

0.3:
  - Windows/Mac: update libssh to 0.8.3
  - Fix GCC 8 compiler warnings
  - Don't use deprecated function on libssh 0.8+

0.2:
  - Initial release